--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
     <head>
         <title>PhoneGap Camera API Sample</title>
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1"> 
-        <meta name="Copyright" content="&copy; 2012, Intel Corporation" />
-        <!--
-           * Copyright (c) 2012, Intel Corporation. All rights reserved.
-           * File revision: 04 October 2012
-           * Please see http://software.intel.com/html5/license/samples 
-           * and the included README.md file for license terms and conditions.
-        -->
+        <meta name="Copyright" content="&copy; 2012, iC0rraxX" />
+        <
         
         <script src="cordova.js"></script>
         <script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
